bundles/typical/inc/gatt_client.nim


proc gatt_client_write_value_of_characteristic*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic_value_handle: uint16; length: uint16; data: ptr uint8): uint8 {.
    importc: "gatt_client_write_value_of_characteristic", header: "gatt_client.h".}
proc gatt_client_write_long_value_of_characteristic*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic_value_handle: uint16; length: uint16; data: ptr uint8): uint8 {.
    importc: "gatt_client_write_long_value_of_characteristic",
    header: "gatt_client.h".}
proc gatt_client_write_long_value_of_characteristic_with_offset*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic_value_handle: uint16; offset: uint16; length: uint16;
    data: ptr uint8): uint8 {.importc: "gatt_client_write_long_value_of_characteristic_with_offset",
                          header: "gatt_client.h".}
## *
##  @brief Writes of the long characteristic value using the characteristic's value handle. It uses server response to validate that the write was correctly received. The gatt_complete_event_t with type set to GATT_EVENT_QUERY_COMPLETE marks the end of write. The write is successfully performed, if the event's status field is set to 0.
##

proc gatt_client_reliable_write_long_value_of_characteristic*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic_value_handle: uint16; length: uint16; data: ptr uint8): uint8 {.
    importc: "gatt_client_reliable_write_long_value_of_characteristic",
    header: "gatt_client.h".}
## *
##  @brief Reads the characteristic descriptor using its handle. If the characteristic descriptor is found, an le_characteristic_descriptor_event_t with type set to GATT_EVENT_CHARACTERISTIC_DESCRIPTOR_QUERY_RESULT will be generated and passed to the registered callback. The gatt_complete_event_t with type set to GATT_EVENT_QUERY_COMPLETE, marks the end of read.
##

proc gatt_client_read_characteristic_descriptor*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    descriptor: ptr gatt_client_characteristic_descriptor_t): uint8 {.
    importc: "gatt_client_read_characteristic_descriptor", header: "gatt_client.h".}
proc gatt_client_read_characteristic_descriptor_using_descriptor_handle*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    descriptor_handle: uint16): uint8 {.importc: "gatt_client_read_characteristic_descriptor_using_descriptor_handle",
                                     header: "gatt_client.h".}
## *
##  @brief Reads the long characteristic descriptor using its handle. It will be returned in several blobs. For each blob, an le_characteristic_descriptor_event_t with type set to GATT_EVENT_CHARACTERISTIC_DESCRIPTOR_QUERY_RESULT will be generated and passed to the registered callback. The gatt_complete_event_t with type set to GATT_EVENT_QUERY_COMPLETE, marks the end of read.
##

proc gatt_client_read_long_characteristic_descriptor*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    descriptor: ptr gatt_client_characteristic_descriptor_t): uint8 {.
    importc: "gatt_client_read_long_characteristic_descriptor",
    header: "gatt_client.h".}
proc gatt_client_read_long_characteristic_descriptor_using_descriptor_handle*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    descriptor_handle: uint16): uint8 {.importc: "gatt_client_read_long_characteristic_descriptor_using_descriptor_handle",
                                     header: "gatt_client.h".}
proc gatt_client_read_long_characteristic_descriptor_using_descriptor_handle_with_offset*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    descriptor_handle: uint16; offset: uint16): uint8 {.importc: "gatt_client_read_long_characteristic_descriptor_using_descriptor_handle_with_offset",
    header: "gatt_client.h".}
## *
##  @brief Writes the characteristic descriptor using its handle. The gatt_complete_event_t with type set to GATT_EVENT_QUERY_COMPLETE, marks the end of write. The write is successfully performed, if the event's status field is set to 0.
##

proc gatt_client_write_characteristic_descriptor*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    descriptor: ptr gatt_client_characteristic_descriptor_t; length: uint16;
    data: ptr uint8): uint8 {.importc: "gatt_client_write_characteristic_descriptor",
                          header: "gatt_client.h".}
proc gatt_client_write_characteristic_descriptor_using_descriptor_handle*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    descriptor_handle: uint16; length: uint16; data: ptr uint8): uint8 {.importc: "gatt_client_write_characteristic_descriptor_using_descriptor_handle",
    header: "gatt_client.h".}
proc gatt_client_write_long_characteristic_descriptor*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    descriptor: ptr gatt_client_characteristic_descriptor_t; length: uint16;
    data: ptr uint8): uint8 {.importc: "gatt_client_write_long_characteristic_descriptor",
                          header: "gatt_client.h".}
proc gatt_client_write_long_characteristic_descriptor_using_descriptor_handle*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    descriptor_handle: uint16; length: uint16; data: ptr uint8): uint8 {.importc: "gatt_client_write_long_characteristic_descriptor_using_descriptor_handle",
    header: "gatt_client.h".}
proc gatt_client_write_long_characteristic_descriptor_using_descriptor_handle_with_offset*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    descriptor_handle: uint16; offset: uint16; length: uint16; data: ptr uint8): uint8 {.importc: "gatt_client_write_long_characteristic_descriptor_using_descriptor_handle_with_offset",
    header: "gatt_client.h".}
## *
##  @brief Writes the client characteristic configuration of the specified characteristic. It is used to subscribe for notifications or indications of the characteristic value. For notifications or indications specify: GATT_CLIENT_CHARACTERISTICS_CONFIGURATION_NOTIFICATION resp. GATT_CLIENT_CHARACTERISTICS_CONFIGURATION_INDICATION as configuration value.
##

proc gatt_client_write_client_characteristic_configuration*(
    callback: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic: ptr gatt_client_characteristic_t; configuration: uint16): uint8 {.
    importc: "gatt_client_write_client_characteristic_configuration",
    header: "gatt_client.h".}
## *
##  @brief -> gatt complete event
##

proc gatt_client_prepare_write*(callback: btstack_packet_handler_t;
                               con_handle: hci_con_handle_t;
                               attribute_handle: uint16; offset: uint16;
                               length: uint16; data: ptr uint8): uint8 {.
    importc: "gatt_client_prepare_write", header: "gatt_client.h".}
## *
##  @brief -> gatt complete event
##

proc gatt_client_execute_write*(callback: btstack_packet_handler_t;
                               con_handle: hci_con_handle_t): uint8 {.
    importc: "gatt_client_execute_write", header: "gatt_client.h".}
## *
##  @brief -> gatt complete event
##

proc gatt_client_cancel_write*(callback: btstack_packet_handler_t;
                              con_handle: hci_con_handle_t): uint8 {.
    importc: "gatt_client_cancel_write", header: "gatt_client.h".}
proc gatt_client_deserialize_service*(packet: ptr uint8; offset: cint;
                                     service: ptr gatt_client_service_t) {.
    importc: "gatt_client_deserialize_service", header: "gatt_client.h".}
proc gatt_client_deserialize_characteristic*(packet: ptr uint8; offset: cint;
    characteristic: ptr gatt_client_characteristic_t) {.
    importc: "gatt_client_deserialize_characteristic", header: "gatt_client.h".}
proc gatt_client_deserialize_characteristic_descriptor*(packet: ptr uint8;
    offset: cint; descriptor: ptr gatt_client_characteristic_descriptor_t) {.
    importc: "gatt_client_deserialize_characteristic_descriptor",
    header: "gatt_client.h".}
proc ble_gatts_find_svc*(uuid: ptr ble_uuid_t; out_handle: ptr uint16): cint {.
    importc: "ble_gatts_find_svc", header: "gatt_client.h".}
proc ble_gatts_find_chr*(srv_handle: uint16; uuid: ptr ble_uuid_t;
                        out_att_chr: ptr uint16): cint {.
    importc: "ble_gatts_find_chr", header: "gatt_client.h".}
type
  gatt_client_notification_t* {.importc: "gatt_client_notification_t",
                               header: "gatt_client.h", bycopy.} = object
    item* {.importc: "item".}: btstack_linked_item_t
    callback* {.importc: "callback".}: btstack_packet_handler_t
    attribute_handle* {.importc: "attribute_handle".}: uint16


## *
##  @brief MTU is available after the first query has completed. If status is equal to 0, it returns the real value, otherwise the default value of 23.
##

proc gatt_client_get_mtu*(con_handle: hci_con_handle_t; mtu: ptr uint16): uint8 {.
    importc: "gatt_client_get_mtu", header: "gatt_client.h".}
## *
##  @brief Returns if the GATT client is ready to receive a query. It is used with daemon.
##

proc gatt_client_is_ready*(con_handle: hci_con_handle_t): cint {.
    importc: "gatt_client_is_ready", header: "gatt_client.h".}
## *
##  @brief Register for notifications and indications of a characteristic enabled by gatt_client_write_client_characteristic_configuration
##  @param notification struct used to store registration
##  @param packet_handler
##  @param con_handle
##  @param characteristic
##

proc gatt_client_listen_for_characteristic_value_updates*(
    notification: ptr gatt_client_notification_t;
    packet_handler: btstack_packet_handler_t; con_handle: hci_con_handle_t;
    characteristic: ptr gatt_client_characteristic_t) {.
    importc: "gatt_client_listen_for_characteristic_value_updates",
    header: "gatt_client.h".}
## *
##  @brief Register for general events
##  @param handler
##

proc gatt_client_register_handler*(handler: btstack_packet_handler_t) {.
    importc: "gatt_client_register_handler", header: "gatt_client.h".}
##  only used for testing

proc gatt_client_pts_suppress_mtu_exchange*() {.
    importc: "gatt_client_pts_suppress_mtu_exchange", header: "gatt_client.h".}
type
  gatt_event_value_packet_t* {.importc: "gatt_event_value_packet_t",
                              header: "gatt_client.h", bycopy.} = object
    handle* {.importc: "handle".}: uint16
    value* {.importc: "value".}: UncheckedArray[uint8] ##  length is given in `value_size`

  gatt_event_long_value_packet_t* {.importc: "gatt_event_long_value_packet_t",
                                   header: "gatt_client.h", bycopy.} = object
    handle* {.importc: "handle".}: uint16
    offset* {.importc: "offset".}: uint16
    value* {.importc: "value".}: UncheckedArray[uint8] ##  length is given in `value_size`


## *
##  @brief Get field handle from event GATT_EVENT_QUERY_COMPLETE
##  @param event packet
##  @return handle
##  @note: btstack_type H
##

proc gatt_event_query_complete_get_handle*(event: ptr uint8): hci_con_handle_t =
  return little_endian_read_16(event, 2)

## *
##  @brief Get field status from event GATT_EVENT_QUERY_COMPLETE
##  @param event packet
##  @return status
##  @note: btstack_type 1
##

proc gatt_event_query_complete_get_status*(event: ptr uint8): uint8 =
  return decode_event_offset(event, uint8, 4)[]

## *
##  @brief Get field handle from event GATT_EVENT_SERVICE_QUERY_RESULT
##  @param event packet
##  @return handle
##  @note: btstack_type H
##

proc gatt_event_service_query_result_get_handle*(event: ptr uint8): hci_con_handle_t =
  return little_endian_read_16(event, 2)

## *
##  @brief Get field service from event GATT_EVENT_SERVICE_QUERY_RESULT
##  @param event packet
##  @param Pointer to storage for service
##  @note: btstack_type X
##
